--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "overrides": {
+  "resolutions": {
     "autoprefixer": "10.4.17",
-    "postcss": "8.4.35",
-    "tailwindcss": "3.4.1"
+    "postcss": "8.4.35"
   }
 }
