--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "rollup": "^4.9.6",
-    "rollup-plugin-terser": "^7.0.2"
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.0",
+    "rollup": "^3.29.4",
+    "@rollup/plugin-terser": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
